--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anisul Islam - Software Engineer</title>
+    <style>
+      #chatbot-container {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 1000;
+      }
+
+      #chatbot-container iframe {
+        width: 400px;
+        height: 600px;
+        border: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Chatbot container with embedded iframe -->
+    <div id="chatbot-container">
+      <iframe
+        src="https://custom-gpt-backend-six.vercel.app/api/chatbot/6830632e1060b3f16ac6f8a1/683062a5343a736eb18cb5e3?domain=https://anisdev.vercel.app"
+        allowtransparency="true"
+      ></iframe>
+    </div>
+
+    <!-- Load your app -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
