--- a/index.html
+++ b/index.html
@@ -31,11 +31,38 @@
         allowtransparency="true"
       ></iframe>
     </div> -->
-
     <!-- Load your app -->
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://custom-gpt-backend-six.vercel.app/api/chatbot/script.js"></script>
-      <script>
+   <script src="https://custom-gpt-backend-six.vercel.app/api/chatbot/script.js"></script>
+<script>
+
+        window.ChatbotConfig = {
+
+          flowId: "6830b5101267d83b58f81609",
+
+          userId: "6823500167e54cfebf9d44fb",
+
+          websiteDomain: "https://anisdev.vercel.app",
+
+          position: "bottom-right",
+
+          theme: {
+
+            primary: "#6366f1",
+
+            secondary: "#f59e0b",
+
+            background: "#ffffff",
+
+            text: "#1f2937"
+
+          }
+
+        };
+
+        window.initChatbot();
+</script>
+ 
         window.ChatbotConfig = {
           flowId: "6830632e1060b3f16ac6f8a1",
           userId: "683062a5343a736eb18cb5e3",
