--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://custom-gpt-backend-six.vercel.app/api/chatbot/script.js" onload="console.log('script.js loaded')" onerror="console.error('Failed to load script.js')"></script>
-  <script src="https://custom-gpt-backend-six.vercel.app/api/chatbot/config.js?flowId=6830b5101267d83b58f81609&userId=6823500167e54cfebf9d44fb&primary=%236366f1&secondary=%23f59e0b&background=%23f8fafc&text=%231f2937&name=Assistant&avatar=https%3A%2F%2Fimg.freepik.com%2Ffree-vector%2Fchatbot-chat-message-vectorart_78370-4104.jpg%3Fsemt%3Dais_hybrid%26w%3D200"></script>
+  <script src="https://custom-gpt-backend-six.vercel.app/api/chatbot/config.js?flowId=123&userId=456&primary=%236366f1&secondary=%23f59e0b&background=%23f8fafc&text=%231f2937&name=Assistant&avatar=https%3A%2F%2Fimg.freepik.com%2Ffree-vector%2Fchatbot-chat-message-vectorart_78370-4104.jpg%3Fsemt%3Dais_hybrid%26w%3D200"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       if (typeof window.initChatbot === 'function') {
@@ -39,8 +39,13 @@
   </head>
   <body>
     <div id="root"></div>
-      <div id="chatbot-container" style="width: 100%; height: 100%;"></div>
-
+    
+      <iframe
+        src="https://custom-gpt-backend-six.vercel.app/api/chatbot/6830632e1060b3f16ac6f8a1/683062a5343a736eb18cb5e3?domain=https%3A%2F%2Fanisdev.vercel.app"
+        style="width: 400px; height: 600px; border: none; position: fixed; "
+        allowtransparency="true"
+      ></iframe>
+    
 
     <!-- Chatbot container with embedded iframe -->
     <!-- <div id="chatbot-container">
@@ -51,49 +56,6 @@
     </div> -->
     <!-- Load your app -->
     <script type="module" src="/src/main.jsx"></script>
-   <script src="https://custom-gpt-backend-six.vercel.app/api/chatbot/script.js"></script>
-<script>
-
-        window.ChatbotConfig = {
-
-          flowId: "6830b5101267d83b58f81609",
-
-          userId: "6823500167e54cfebf9d44fb",
-
-          websiteDomain: "https://anisdev.vercel.app",
-
-          position: "bottom-right",
-
-          theme: {
-
-            primary: "#6366f1",
-
-            secondary: "#f59e0b",
-
-            background: "#ffffff",
-
-            text: "#1f2937"
-
-          }
-
-        };
-
-        window.initChatbot();
-</script>
- 
-        window.ChatbotConfig = {
-          flowId: "6830632e1060b3f16ac6f8a1",
-          userId: "683062a5343a736eb18cb5e3",
-          websiteDomain: "https://anisdev.vercel.app",
-          position: "bottom-right",
-          theme: {
-            primary: "#6366f1",
-            secondary: "#f59e0b",
-            background: "#ffffff",
-            text: "#1f2937"
-          }
-        };
-        window.initChatbot();
-      </script>
+  
   </body>
 </html>
