--- a/index.html
+++ b/index.html
@@ -25,17 +25,16 @@
   <body>
     <div id="root"></div>
     
-    
-    <script src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/script.js"></script>
+ <script src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/script.js"></script>
       <script>
         window.ChatbotConfig = {
-          flowId: "68331888f43a780c0bea92f0",
+          flowId: "68332281869958253f2a09c3",
           userId: "683062a5343a736eb18cb5e3",
           websiteDomain: "https://anisdev.vercel.app",
           position: "bottom-right",
           theme: {
-            primary: "#4fee3a",
-            secondary: "#000000",
+            primary: "#6366f1",
+            secondary: "#f59e0b",
             background: "#ffffff",
             text: "#1f2937"
           }
