--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
   <body>
     <div id="root"></div>
     
+   <iframe
+  src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/68332281869958253f2a09c3/683062a5343a736eb18cb5e3?domain=https%3A%2F%2Fanisdev.vercel.app"
+  style="
+    width: 400px;
+    height: 600px;
+    border: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+  "
+  allowtransparency="true"
+></iframe>
+
+    
  <script src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/script.js"></script>
       <script>
         window.ChatbotConfig = {
