--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 ></iframe>
 
     
- <script src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/script.js"></script>
+ <!-- <script src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/script.js"></script>
       <script>
         window.ChatbotConfig = {
           flowId: "68332281869958253f2a09c3",
@@ -57,7 +57,7 @@
           }
         };
         window.initChatbot();
-      </script>
+      </script> -->
     <!-- Chatbot container with embedded iframe -->
     <!-- <div id="chatbot-container">
       <iframe
