--- a/index.html
+++ b/index.html
@@ -25,22 +25,11 @@
   <body>
     <div id="root"></div>
     
-   <!-- <iframe
-  src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/68332281869958253f2a09c3/683062a5343a736eb18cb5e3?domain=https%3A%2F%2Fanisdev.vercel.app"
-  style="
-    width: 400px;
-    height: 600px;
-    border: none;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-
-    z-index: 9999;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    border-radius: 12px;
-  "
-  allowtransparency="true"
-></iframe> -->
+<iframe
+        src="https://custom-gpt-backend-sigma.vercel.app/api/chatbot/68348001c057079e12a2031d/683307347fb0b329f0322ea5?domain=https%3A%2F%2Fanisdev.vercel.app"
+        style="width: 400px; height: 600px; border: none; position: fixed;"
+        allowtransparency="true"
+></iframe>
 
     
  <!-- <script src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/script.js"></script>
