--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
       ></iframe>
     </div> -->
     <!-- Load your app -->
+     <script src="https://custom-gpt-backend-sigma.vercel.app/api/chatbot/script.js"></script>
+      <script>
+        window.ChatbotConfig = {
+          flowId: "683996cabe21a293308c5ae0",
+          userId: "68398c08ab6f704d551cc7b6",
+          websiteDomain: "https://anisdev.vercel.app",
+          position: "bottom-right",
+          theme: {
+            primary: "#e00b0b",
+            secondary: "#33e901",
+            background: "#be1e1e",
+            text: "#d3ff5c"
+          }
+        };
+        window.initChatbot();
+      </script>
     <script type="module" src="/src/main.jsx"></script>
   
   </body>
