--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <body>
     <div id="root"></div>
     
-<iframe
+<!-- <iframe
         src="https://custom-gpt-backend-sigma.vercel.app/api/chatbot/68348001c057079e12a2031d/683307347fb0b329f0322ea5?domain=https%3A%2F%2Fanisdev.vercel.app"
         style="width: 400px; height: 600px; border: none; position: fixed;"
         allowtransparency="true"
-></iframe>
+></iframe> -->
 
     
  <!-- <script src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/script.js"></script>
