comment out iframe in index.js

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         allowtransparency="true"
 ></iframe> -->
 
-      <iframe
+      <!-- <iframe
         src="https://custom-gpt-backend-sigma.vercel.app/api/chatbot/683996cabe21a293308c5ae0/68398c08ab6f704d551cc7b6?domain=https%3A%2F%2Fanisdev.vercel.app"
         style="width: 400px; height: 600px; border: none; position: fixed; "
         allowtransparency="true"
-      ></iframe>
+      ></iframe> -->
     
     
  <!-- <script src="https://custom-gpt-backend-eta.vercel.app/api/chatbot/script.js"></script>
