--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         window.initChatbot();
       </script> -->
     <script type="module" src="/src/main.jsx"></script>
+    <script type='text/javascript' src='//pl27253330.profitableratecpm.com/8d/77/31/8d773194ca7627c73901b7c77821ce5c.js'></script>
   
   </body>
 </html>
