--- a/index.html
+++ b/index.html
@@ -7,19 +7,7 @@
      <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <title>Anisul Islam - Software Engineer</title>
-    <style>
-      #chatbot-container {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        z-index: 1000;
-      }
-
-      #chatbot-container iframe {
-        width: 400px;
-        height: 600px;
-        border: none;
-      }
+    
     </style>
   </head>
   <body>
@@ -79,7 +67,8 @@
         window.initChatbot();
       </script> -->
     <script type="module" src="/src/main.jsx"></script>
-    <script type='text/javascript' src='//pl27253330.profitableratecpm.com/8d/77/31/8d773194ca7627c73901b7c77821ce5c.js'></script>
-  
+    <script type='text/javascript' src='/pl27253330.profitableratecpm.com/8d/77/31/8d773194ca7627c73901b7c77821ce5c.js'></script>
+<script async="async" data-cfasync="false" src="//pl27253342.profitableratecpm.com/9adf129a0f900735ea97b46f79678ed5/invoke.js"></script>
+<div id="container-9adf129a0f900735ea97b46f79678ed5"></div>
   </body>
 </html>
