--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
   <body>
     <div id="root"></div>
     
-<!-- <iframe
-        src="https://custom-gpt-backend-sigma.vercel.app/api/chatbot/68348001c057079e12a2031d/683307347fb0b329f0322ea5?domain=https%3A%2F%2Fanisdev.vercel.app"
-        style="width: 400px; height: 600px; border: none; position: fixed;"
-        allowtransparency="true"
-></iframe> -->
+<script type="text/javascript">
+	atOptions = {
+		'key' : '9a0ea7a84e149b9102b723b3c290c677',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9a0ea7a84e149b9102b723b3c290c677/invoke.js"></script>
 
       <!-- <iframe
         src="https://custom-gpt-backend-sigma.vercel.app/api/chatbot/683996cabe21a293308c5ae0/68398c08ab6f704d551cc7b6?domain=https%3A%2F%2Fanisdev.vercel.app"
