--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <body>
     <div id="root"></div>
 
+<!-- google anylytics -->
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQM89N016W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MQM89N016W');
+</script>
 
 <script type="text/javascript">
 	atOptions = {
