--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://anvobot-ai-web-agent.vercel.app/widget.js?websiteId=6941313613ce4e55c3f660c0"></script>
 
   </body>
 </html>
